--- a/deja_style.css
+++ b/deja_style.css
@@ -1,9 +1,9 @@
 body {
-  font-family:  'Exo', cursive;
+  font-family:  'Exo', sans-serif;
 }
 
 .logo {
-  font-family: 'Chango', cursive;
+  font-family: 'Chango', sans-serif;
   font-size:5em;
   text-align: center;
   margin: 0;
@@ -15,12 +15,12 @@ body {
 }
 
 .delay {
-  font-family:  'Chango', cursive;
+  font-family:  'Chango', sans-serif;
   font-size: 2em;
   font-weight: normal;
 }
 .depuis {
-  font-family:  'Exo', cursive;
+  font-family:  'Exo', sans-serif;
   font-weight: 500;
   font-size: 1em;
   opacity: .6;
@@ -28,7 +28,7 @@ body {
   /*font-weight: bold;*/
 }
 .item-text {
-  font-family:  'Exo', cursive;
+  font-family:  'Exo', sans-serif;
   font-weight: 500;
   font-size: 1.2em;
 }
