--- a/deja_style.css
+++ b/deja_style.css
@@ -33,6 +33,10 @@ body {
   font-size: 1.2em;
 }
 
+.picker__date-display{
+  display: none;
+
+}
 /*.radio-indigo[type="radio"] + label:before{
     border: 2px solid indigo;
     background: transparent;
